[package]
name = "deluge_custom_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.26"
chrono-humanize = "0.2.2"
clap = { version = "4.3.2" }
reqwest = "0.11.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"
