[package]
name = "canto-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
serde = { version = "1.0.183" , features = ["serde_derive"] }
serde_yaml = "0.9.25"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
strip = true
panic = "abort"
