[package]
name = "provision_choose_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.11"
crossterm = "0.26.1"
regex = "1.7.1"
tui = "0.19.0"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
strip = true
panic = "abort"
