[package]
name = "provision_update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
serde = { version = "1.0.152" , features = [ "derive" ]}
serde_json = "1.0.93"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
strip = true
panic = "abort"
