[package]
name = "uncompress_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skim = "0.10.4"
walkdir = "2"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
strip = true
panic = "abort"
